# linux-dev

./: .gitignore
01_TerminalProject/: Show.c
01_TerminalProject_v2/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  testcase1.gdb  testcase1.ref.txt  testcase2.gdb  testcase2.ref.txt
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  preload.c
06_Tracing/tests/: preload.sh  rc0.sh  rc1.sh  rc2.sh  rc3.sh  rc4.sh  rc6.sh  rc7.sh  rc8.sh  rc9.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c
07_Environmental/src/: rhasher.c
07_Environmental/test/: test.sh
08_I18n/: configure.ac
08_I18n/po/: ru.po
08_I18n/share/locale/ru/LC_MESSAGES/: guesser.po
08_I18n/src/: guesser.c
09_PatchDiff/: 0001-Pass-size-as-parameter.patch  0002-Allow-for-arbitrary-symbols.patch  0003-Pass-random-seed-as-parameter.patch  Makefile  maze.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am
10_LibTesting/tests/: Makefile.am  bench.ts  unit.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guesser.c  roman.h
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/include/: Makefile.am  utcdate.h
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  epoch2date.c  libutcdate.c  utcdate.c  utcdate.h
12_InstallPackaging/tests/: Makefile.am  dt2timestamp.ts  get_weekday.ts  timestamp2dt.ts  unit.ts
